--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ background-color: #45a049;
 </style>
 </head> 
 <body> 
-<h2>User Registration Form</h2> 
+<h2>User Registration Form</h2>
+<h3>my college</h3>
 <form> 
 <label for="name">Name:</label> 
 <input type="text" id="name" name="name" required><br> 
